--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>541</width>
+    <width>376</width>
     <height>241</height>
    </rect>
   </property>
@@ -48,7 +48,7 @@
  qproperty-alignment: 'AlignVCenter | AlignRight';
  border: 1px solid gray;
 background-color : #FDE2E2;
-border-radius: 5px;
+border-radius: 5px
 }</string>
     </property>
     <property name="text">
@@ -77,31 +77,6 @@ stop: 0 #F3184B, stop: 1 #FF9AFF);
     </property>
     <property name="text">
      <string>С</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_plusMinus">
-    <property name="geometry">
-     <rect>
-      <x>360</x>
-      <y>180</y>
-      <width>61</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
- background-color: black;
- border: 1px solid gray;
-   border-radius: 5px;
-color: white;
-}
-QPushButton:pressed {
- background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1,
-stop: 0 #F3184B, stop: 1 #FF9AFF);
-}</string>
-    </property>
-    <property name="text">
-     <string>+/-</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_7">
@@ -542,186 +517,11 @@ stop: 0 #F3184B, stop: 1 #FF9AFF);
  qproperty-alignment: 'AlignVCenter | AlignRight';
  border: 1px solid gray;
 background-color : #FDE2E2;
-border-radius: 5px;
+border-radius: 5px
 }</string>
     </property>
     <property name="text">
      <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_sqrt">
-    <property name="geometry">
-     <rect>
-      <x>360</x>
-      <y>0</y>
-      <width>61</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
- background-color: black;
- border: 1px solid gray;
-   border-radius: 5px;
-color: white;
-}
-QPushButton:pressed {
- background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1,
-stop: 0 #F3184B, stop: 1 #FF9AFF);
-}</string>
-    </property>
-    <property name="text">
-     <string>√</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_pow">
-    <property name="geometry">
-     <rect>
-      <x>360</x>
-      <y>60</y>
-      <width>61</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
- background-color: black;
- border: 1px solid gray;
-   border-radius: 5px;
-color: white;
-}
-QPushButton:pressed {
- background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1,
-stop: 0 #F3184B, stop: 1 #FF9AFF);
-}</string>
-    </property>
-    <property name="text">
-     <string>x²</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_powe">
-    <property name="geometry">
-     <rect>
-      <x>360</x>
-      <y>120</y>
-      <width>61</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
- background-color: black;
- border: 1px solid gray;
-   border-radius: 5px;
-color: white;
-}
-QPushButton:pressed {
- background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1,
-stop: 0 #F3184B, stop: 1 #FF9AFF);
-}</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_cos">
-    <property name="geometry">
-     <rect>
-      <x>420</x>
-      <y>60</y>
-      <width>61</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
- background-color: black;
- border: 1px solid gray;
-   border-radius: 5px;
-color: white;
-}
-QPushButton:pressed {
- background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1,
-stop: 0 #F3184B, stop: 1 #FF9AFF);
-}</string>
-    </property>
-    <property name="text">
-     <string>cos</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_sin">
-    <property name="geometry">
-     <rect>
-      <x>420</x>
-      <y>0</y>
-      <width>61</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
- background-color: black;
- border: 1px solid gray;
-   border-radius: 5px;
-color: white;
-}
-QPushButton:pressed {
- background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1,
-stop: 0 #F3184B, stop: 1 #FF9AFF);
-}</string>
-    </property>
-    <property name="text">
-     <string>sin</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_tan">
-    <property name="geometry">
-     <rect>
-      <x>420</x>
-      <y>120</y>
-      <width>61</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
- background-color: black;
- border: 1px solid gray;
-   border-radius: 5px;
-color: white;
-}
-QPushButton:pressed {
- background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1,
-stop: 0 #F3184B, stop: 1 #FF9AFF);
-}</string>
-    </property>
-    <property name="text">
-     <string>tan</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_factorial">
-    <property name="geometry">
-     <rect>
-      <x>420</x>
-      <y>180</y>
-      <width>61</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
- background-color: black;
- border: 1px solid gray;
-   border-radius: 5px;
-color: white;
-}
-QPushButton:pressed {
- background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1,
-stop: 0 #F3184B, stop: 1 #FF9AFF);
-}</string>
-    </property>
-    <property name="text">
-     <string>x!</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_back">
@@ -745,107 +545,31 @@ stop: 0 #F3184B, stop: 1 #FF9AFF);
 }</string>
     </property>
     <property name="text">
-     <string>←</string>
+     <string>&lt;-</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_fraction">
+   <widget class="QRadioButton" name="radioButton">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>120</y>
-      <width>61</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
- background-color: black;
- border: 1px solid gray;
-   border-radius: 5px;
-color: white;
-}
-QPushButton:pressed {
- background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1,
-stop: 0 #F3184B, stop: 1 #FF9AFF);
-}</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_deg">
-    <property name="geometry">
-     <rect>
-      <x>480</x>
-      <y>180</y>
-      <width>61</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
- background-color: black;
- border: 1px solid gray;
-   border-radius: 5px;
-color: white;
-}
-QPushButton:pressed {
- background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1,
-stop: 0 #F3184B, stop: 1 #FF9AFF);
-}</string>
-    </property>
-    <property name="text">
-     <string>deg</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_ln">
-    <property name="geometry">
-     <rect>
-      <x>480</x>
+      <x>360</x>
       <y>0</y>
-      <width>61</width>
-      <height>61</height>
+      <width>16</width>
+      <height>241</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton {
- background-color: black;
+     <string notr="true">QRadioButton {
+ background-color:#FDE2E2;
  border: 1px solid gray;
    border-radius: 5px;
-color: white;
 }
-QPushButton:pressed {
+QRadioButton:pressed {
  background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1,
 stop: 0 #F3184B, stop: 1 #FF9AFF);
 }</string>
     </property>
     <property name="text">
-     <string>ln</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_log">
-    <property name="geometry">
-     <rect>
-      <x>480</x>
-      <y>60</y>
-      <width>61</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
- background-color: black;
- border: 1px solid gray;
-   border-radius: 5px;
-color: white;
-}
-QPushButton:pressed {
- background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1,
-stop: 0 #F3184B, stop: 1 #FF9AFF);
-}</string>
-    </property>
-    <property name="text">
-     <string>log</string>
+     <string>.</string>
     </property>
    </widget>
   </widget>
@@ -853,3 +577,4 @@ stop: 0 #F3184B, stop: 1 #FF9AFF);
  <resources/>
  <connections/>
 </ui>
+
