--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -545,7 +545,7 @@ stop: 0 #F3184B, stop: 1 #FF9AFF);
 }</string>
     </property>
     <property name="text">
-     <string>plusik/string>
+     <string>plusik</string>
     </property>
    </widget>
    <widget class="QRadioButton" name="radioButton">
